--- a/QuanLyNhanKhau/Views/Shared/_Layout.cshtml
+++ b/QuanLyNhanKhau/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
                                 <a href="invoice.html"><i class="fa fa-coffee"></i>Xem danh sách</a>
                             </li>
                             <li>
-                                <a asp-controller="HoKhau" asp-action="Index"><i class="fa fa-key "></i>Danh sách hộ khẩu</a>
+                                <a asp-controller="Data" asp-action="Index"><i class="fa fa-key "></i>Danh sách hộ khẩu</a>
                             </li>
                             <li>
                                 <a href="history.html"><i class="fa fa-send "></i>Lịch sử thay đôi</a>
