--- a/QuanLyNhanKhau/Views/Data/Details_HoKhau.cshtml
+++ b/QuanLyNhanKhau/Views/Data/Details_HoKhau.cshtml
@@ -13,7 +13,7 @@
     bool check = true;
     NhanKhau chuHo = null;
     ViewBag.SoHoKhau = Model.SoHoKhau;
-    if (chuHo == null)
+    if (Model.nhanKhaus.Count() == 0)
     {
         check = false;
     } else
@@ -106,11 +106,12 @@
                                             <td>@member.CMND</td>
                                             <td>@member.QuanHe</td>
                                             <td>
-                                                <a data-toggle="modal" data-target="#Edit_@member.IdNhanKhau"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+                                                <a data-toggle="modal" data-target="#EditNK_@member.IdNhanKhau"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
                                                 <a data-toggle="modal" data-target="#Leave_@member.IdNhanKhau"><i class="fa fa-minus-square" aria-hidden="true"></i></a>
                                                 <a data-toggle="modal" data-target="#Details_@member.IdNhanKhau"><i class="fa fa-eye" aria-hidden="true"></i></a>
                                                 <a data-toggle="modal" data-target="#Delete_@member.IdNhanKhau"><i class="fa fa-trash" aria-hidden="true"></i></a>
                                                 @Html.Partial("Details_NhanKhau.cshtml", @member)
+                                                @Html.Partial("Edit_NhanKhau.cshtml", @member)
                                             </td>
                                         </tr>
                                     }
