--- a/QuanLyNhanKhau/Views/Data/MasterChangeForm.cshtml
+++ b/QuanLyNhanKhau/Views/Data/MasterChangeForm.cshtml
@@ -1,1 +1,53 @@
-﻿
+﻿@model QuanLyNhanKhau.Models.HoKhau
+@inject QuanLyNhanKhauConText _context
+
+@*@{
+    ViewData["Title"] = "Thêm mới hộ khẩu";
+    ViewData["Desc"] = "Thêm sổ hộ khẩu mới";
+    Layout = "~/Views/Shared/_InnerLayout.cshtml";
+}*@
+
+@{
+    int dem = 1;
+}
+
+<div class="modal fade" id="EditMasterModel" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="modal-title" id="myModalLabel"><strong>Thay đổi chủ hộ</strong></h4>
+            </div>
+            <div class="modal-body m-2" style="background:aliceblue;">
+                <div class="row">
+                    <div class="alert alert-warning" style="margin-left: 1em;margin-right:1 em;"><strong>Chú ý</strong>: Nhập để nhập 0 vào phần điền của chủ hộ mới</div>
+                    <div class="col-md-12">
+                        <form asp-action="EditMaster_NhanKhau">
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <input type="hidden" name="id" value="@Model.SoHoKhau" />
+                            <input type="hidden" name="count" value="@Model.nhanKhaus.Count()" />
+                            <label class="form-label">Chủ hộ mới</label>
+                            <select class="form-control" style="margin-bottom:0.5em" name="newMaster">
+                                @foreach (var member in Model.nhanKhaus)
+                                {
+                                    <option value="@member.IdNhanKhau">@member.HoTen (@member.CMND)</option>
+                                }
+                            </select>
+                            @foreach (var member in Model.nhanKhaus)
+                            {
+                                <div class="form-group">
+                                    <label for="nk @dem" class="control-label">Quan hệ với chủ hộ của <strong>@member.HoTen</strong></label>
+                                    <input name="nk @dem" type="text" class="form-control" />
+                                    <input name="nkid @dem" type="hidden" value="@member.IdNhanKhau" class="form-control" />
+                                </div>
+                            }
+                            <div class="form-group">
+                                <input type="submit" value="Save" class="btn btn-default" />
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
