--- a/QuanLyNhanKhau/Views/Data/Edit_NhanKhau.cshtml
+++ b/QuanLyNhanKhau/Views/Data/Edit_NhanKhau.cshtml
@@ -100,7 +100,7 @@
                                         <span asp-validation-for="GhiChu" class="text-danger"></span>
                                     </div>
                                     <input asp-for="NguyenNhan" type="hidden" value="@Model.NguyenNhan">
-                                    <input asp-for="soHoKhau" type="hidden" value="ViewBag.soHoKhau">
+                                    <input asp-for="soHoKhau" type="hidden" value="@ViewBag.soHoKhau">
                                     <div class="form-group">
                                         <input type="submit" value="Save" class="btn btn-default" />
                                     </div>
