--- a/QuanLyNhanKhau/Views/Home/Index.cshtml
+++ b/QuanLyNhanKhau/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@inject QuanLyNhanKhauConText _context
+
+@{
     ViewData["Title"] = "Dashboard";
     ViewData["Subtitle"] = "Thông tin chung về hộ khẩu, nhân khẩu";
 }
@@ -16,7 +18,7 @@
                 <div class="main-box mb-red">
                     <a href="#">
                         <i class="fa fa-bolt fa-5x"></i>
-                        <h5>hộ gia đình</h5>
+                        <h5>@_context.hoKhaus.Count() hộ gia đình</h5>
                     </a>
                 </div>
             </div>
@@ -24,7 +26,7 @@
                 <div class="main-box mb-dull">
                     <a href="#">
                         <i class="fa fa-plug fa-5x"></i>
-                        <h5>nhân khẩu</h5>
+                        <h5>@_context.nhanKhaus.Count() nhân khẩu</h5>
                     </a>
                 </div>
             </div>
