--- a/QuanLyNhanKhau/Views/Shared/_Layout.cshtml
+++ b/QuanLyNhanKhau/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
                     </li>
 
                     <li>
-                        <a class="active-menu" href="index.html"><i class="fa fa-dashboard "></i>Dashboard</a>
+                        <a asp-controller="Home" asp-action="Index"><i class="fa fa-dashboard "></i>Trang chủ</a>
                     </li>
 
                     <li>
