--- a/QuanLyNhanKhau/Views/Data/Index_HoKhau.cshtml
+++ b/QuanLyNhanKhau/Views/Data/Index_HoKhau.cshtml
@@ -41,7 +41,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
+        @foreach (var item in Model.Where(p=>p.SoHoKhau != "Null").ToList())
         {
             <tr>
                 <td>
