Bo Sung Nha Van Hoa

--- a/QuanLyNhanKhau/Views/Account/Login.cshtml
+++ b/QuanLyNhanKhau/Views/Account/Login.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model QuanLyNhanKhau.Models.Account
+@{
     Layout = null;
 }
 
@@ -119,9 +120,9 @@
       <button>create</button>
       <p class="message">Already registered? <a href="#">Sign In</a></p>
     </form>
-    <form class="login-form">
-      <input type="text" placeholder="Nhập số CMND"/>
-      <input type="password" placeholder="Nhập mật khẩu"/>
+    <form asp-action="Login" class="login-form">
+      <input asp-for="CMND" placeholder="Nhập số CMND"/>
+      <input asp-for="Password" placeholder="Nhập mật khẩu"/>
       <button>Đăng nhập</button>
     </form>
   </div>
