--- a/QuanLyNhanKhau/Views/Data/Details_HoKhau.cshtml
+++ b/QuanLyNhanKhau/Views/Data/Details_HoKhau.cshtml
@@ -117,7 +117,7 @@
                                                 @Html.Partial("Details_NhanKhau.cshtml", @member)
                                                 @Html.Partial("Edit_NhanKhau.cshtml", @member)
                                                 @Html.Partial("Leave_NhanKhau.cshtml", @member)
-                                                
+                                                @Html.Partial("Delete_NhanKhau.cshtml", @member)
                                             </td>
                                         </tr>
                                     }
