--- a/QuanLyNhanKhau/Views/Home/Index.cshtml
+++ b/QuanLyNhanKhau/Views/Home/Index.cshtml
@@ -33,8 +33,8 @@
             <div class="col-md-4">
                 <div class="main-box mb-pink">
                     <a href="#">
-                        <i class="fa fa-dollar fa-5x"></i>
-                        <h5>NAM GAY</h5>
+                        <i class="fa fa-calendar fa-5x"></i>
+                        <h5>Nhà văn hóa "TO"</h5>
                     </a>
                 </div>
             </div>
