--- a/QuanLyNhanKhau/Views/Shared/_Layout.cshtml
+++ b/QuanLyNhanKhau/Views/Shared/_Layout.cshtml
@@ -71,21 +71,18 @@
                     </li>
 
                     <li>
-                        <a href="#"><i class="fa fa-flash "></i>Chưa tên</a>
-
+                        <a href="#"><i class="fa fa-flash "></i>Nhà văn hóa<span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level">
+                            <li>
+                                <a href=""><i class="fa fa-info "></i>Cơ sở vật chất</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa fa-calendar "></i>Yêu cầu sử dụng</a>
+                            </li>
+                        </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-bicycle "></i>Chưa tên <span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level">
-
-                            <li>
-                                <a href="#"><i class="fa fa-desktop "></i>Chưa tên </a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-code "></i>Chưa tên</a>
-                            </li>
-
-                        </ul>
+                        <a asp-controller="Home" asp-action="Index"><i class="fa fa-dashboard "></i>Nam gay</a>
                     </li>
                 </ul>
 
