--- a/QuanLyNhanKhau/Views/Data/Delete_HoKhau.cshtml
+++ b/QuanLyNhanKhau/Views/Data/Delete_HoKhau.cshtml
@@ -35,7 +35,7 @@
                                 </dd>
                             </dl>
     
-                            <form asp-action="Delete">
+                            <form asp-action="Delete_HoKhau">
                                 <input type="hidden" asp-for="SoHoKhau" />
                                 <input type="submit" value="Delete" class="btn btn-default" /> 
                             </form>
