--- a/QuanLyNhanKhau/Views/Data/Delete_NhanKhau.cshtml
+++ b/QuanLyNhanKhau/Views/Data/Delete_NhanKhau.cshtml
@@ -1,112 +1,117 @@
 ﻿@model QuanLyNhanKhau.Models.NhanKhau
-
-@{
-    ViewData["Title"] = "Delete";
-    Layout = "~/Views/Shared/_InnerLayout.cshtml";
-}
-
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>NhanKhau</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.HoTen)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.HoTen)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.BiDanh)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.BiDanh)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.NgaySinh)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.NgaySinh)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.NoiSinh)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.NoiSinh)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.NguyenQuan)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.NguyenQuan)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.DanToc)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.DanToc)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.NgheNghiep)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.NgheNghiep)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.NoiLamViec)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.NoiLamViec)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CMND)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CMND)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.NgayCapCMND)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.NgayCapCMND)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.NoiCapCMND)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.NoiCapCMND)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.NgayDangKi)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.NgayDangKi)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.DiaChiTruoc)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.DiaChiTruoc)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.QuanHe)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.QuanHe)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.hoKhau)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.hoKhau.SoHoKhau)
-        </dd>
-    </dl>
     
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="IdNhanKhau" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+
 </div>
+
+    <div class="modal fade" id="DeleteNK_@Model.IdNhanKhau" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h4 class="modal-title" id="myModalLabel"><strong>Bạn có chắc muốn xóa nhân khẩu này</strong></h4>
+                </div>
+                <div class="modal-body m-2" style="background:aliceblue;">
+                <dl class="dl-horizontal">
+                    <dt>
+                        @Html.DisplayNameFor(model => model.HoTen)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.HoTen)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.BiDanh)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.BiDanh)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.NgaySinh)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.NgaySinh)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.NoiSinh)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.NoiSinh)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.NguyenQuan)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.NguyenQuan)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.DanToc)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.DanToc)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.NgheNghiep)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.NgheNghiep)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.NoiLamViec)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.NoiLamViec)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.CMND)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.CMND)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.NgayCapCMND)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.NgayCapCMND)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.NoiCapCMND)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.NoiCapCMND)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.NgayDangKi)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.NgayDangKi)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.DiaChiTruoc)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.DiaChiTruoc)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.QuanHe)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.QuanHe)
+                    </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.hoKhau)
+                    </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.hoKhau.SoHoKhau)
+                    </dd>
+                </dl>
+    
+                                <form asp-action="Delete_NhanKhau">
+                                    <input type="hidden" asp-for="IdNhanKhau" />
+                                    <input type="submit" value="Delete" class="btn btn-default" /> |
+                                </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
