--- a/QuanLyNhanKhau/Views/Data/Details_HoKhau.cshtml
+++ b/QuanLyNhanKhau/Views/Data/Details_HoKhau.cshtml
@@ -79,6 +79,18 @@
     </div>
     @Html.Partial("History_HoKhau.cshtml", Model)
     @Html.Partial("TachHo_HoKhau.cshtml", Model)
+
+    <div class="row" style="margin-left:0px;margin-right:0px;">
+        <div class="panel panel-info">
+            <div class="panel-heading">
+                <strong>Đăng kí sử dụng nhà văn hóa</strong>
+            </div>
+            <div class="panel-body">
+                <strong>Xem chi tiết các ca tại <a href="https://docs.google.com/spreadsheets/d/1R57VEkYdSBnof7k2yU0KBF6MMluqXcFL/edit?rtpof=true&sd=true">đây.</a></strong>
+                <button>Đăng kí</button>
+            </div>
+        </div>
+    </div>
 </div>
 <div class="col-md-8">
     <div class="row" style="margin-left:0px;margin-right:0px;">
