--- a/QuanLyNhanKhau/Views/Shared/_Layout.cshtml
+++ b/QuanLyNhanKhau/Views/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@
                         <a href="#"><i class="fa fa-flash "></i>Nhà văn hóa<span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
-                                <a href=""><i class="fa fa-info "></i>Cơ sở vật chất</a>
+                                <a asp-action="Index_NhaVanHoa" asp-controller="NhaVanHoa"><i class="fa fa-info "></i>Cơ sở vật chất</a>
                             </li>
                             <li>
                                 <a href="#"><i class="fa fa-calendar "></i>Yêu cầu sử dụng</a>
